# MoE-LLaVA

./: .gitignore  pyproject.toml
moellava/: constants.py
moellava/model/: __init__.py
moellava/model/language_model/: llava_qwen_moe.py
moellava/model/multimodal_model/: qwen2_vl_moe.py  qwen2_vl_moe_run_test.py
moellava/train/: args.py  callbacks.py  llava_trainer.py  train.py  train_mem.py  utils.py
scripts/: analyze_expert_grouping.py
scripts/v1/qwen/: finetune_k.sh  finetune_moe_med_s2.sh  finetune_moe_med_s2_k.sh  finetune_moe_med_v1.sh
scripts/v1/qwen2_vl/: convert_ds2s.py  finetune_moe_med.sh  finetune_moe_med_group.sh  finetune_moe_med_k.sh  finetune_moe_med_kd.sh  finetune_moe_med_r1.sh  finetune_moe_med_ss.sh  finetune_moe_med_statistics.sh  statistics.sh
