[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moellava"
version = "1.0.0"
description = "Mixture-of-Experts for Large Vision-Language Models."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.49.0",
    "tokenizers==0.21.0",
    "sentencepiece==0.1.99",
    "shortuuid",
    "accelerate==0.26.0",
    "peft==0.10.0",
    "bitsandbytes==0.41.0",
    "pydantic",
    "markdown2[all]",
    "numpy",
    "scikit-learn==1.2.2",
    "gradio==3.37.0",
    "gradio_client==0.7.0",
    "requests",
    "httpx==0.24.0",
    "uvicorn",
    "fastapi",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.6.13",
    "protobuf==4.24.4",
    "tiktoken==0.5.2",
    "openai==0.28.0",
    "openpyxl==3.1.2",
    "setuptools>=80.9.0",
    "flash-attn>=2.8.3",
    "ujson>=5.11.0",
    "qwen-vl-utils>=0.0.14",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
train = ["deepspeed==0.16.4", "ninja", "wandb", "tensorboardX==2.6.2.2"]

[project.urls]
"Homepage" = "https://github.com/PKU-YuanGroup/MoE-LLaVA"
"Bug Tracker" = "https://github.com/PKU-YuanGroup/MoE-LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
